fix: enhance image handling by cropping whitespace and adjusting layout for question elements

--- a/style.scss
+++ b/style.scss
@@ -105,24 +105,40 @@
         flex-direction: row;
         align-items: flex-start;
         justify-content: flex-end;
-
+        padding: 3mm 2mm 3mm 0;
 
         .question-number {
           font-size: 3.5mm;
           font-weight: 600;
           color: #333333;
-          margin-top: 1mm;
-          width: 7mm;
+          margin-top: -1mm;
+          width: 9mm;
           display: flex;
           justify-content: flex-end;
+          padding: 0 2mm 0 0;
         }
 
         img {
           object-fit: contain;
-          max-width: calc(100% - 7mm);
+          max-width: calc(100% - 9mm);
         }
       }
 
+    }
+
+    .left-column {
+
+      .question {
+        padding: 3mm 2mm 3mm 0;
+      }
+    }
+
+    .right-column {
+
+      .question {
+
+        padding: 3mm 0 3mm 2mm;
+      }
     }
 
 
